# puyuma-core

./: AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  debug.gdb  env.sh  halt_motor.sh  install_dep.sh  package.xml  rc.local  set_ros_master.sh
calibration/: main.cpp
calibration/camera_attribute/: main.cpp
calibration/color_threshold/: main.cpp  setting.h
calibration/extrinsic_calibration/: main.cpp  setting.hpp
calibration/intrinsic_calibration/: main.cpp
camera/: .main.cpp.swp  controller.hpp  lane_detector.cpp  lane_detector.hpp  main.cpp
common/: hsv_threshold.h  queue.hpp  xeno_math.cpp  xeno_math.hpp
config/: setting.yaml
config/colin/: extrinsic_calibration.yaml  hsv_thresholding.yaml  intrinsic_calibration.yaml  pid.yaml
config/xenobot/: extrinsic_calibration.yaml  hsv_thresholding.yaml  intrinsic_calibration.yaml  motor.yaml  pid.yaml
joystick/: main.cpp
launch/: activate_controller.launch  activate_controller_gdb.launch  camera_attribute.launch  extrinsic_calibration.launch  object_tracking.launch
msg/: segment.msg  segmentArray.msg  threshold_setting.msg  wheel_command.msg
src/: publish_test.py  scatter_view_node.py
srv/: SendHsv.srv  SetAtt.srv
system/: apriltags_detector.cpp  apriltags_detector.hpp  camera.cpp  camera.hpp  controller.cpp  controller.hpp  lane_detector.cpp  lane_detector.hpp  main.cpp  motor.cpp  motor.hpp  rt_motor.cpp
system/KsoftPWM/: insmod.sh  pwm_user.c  pwm_user.h  rmmod.sh  xenopwm.h  xenopwm.ko
tools/: image_capture.cpp  scatter_view_node.py
